# fastcheck

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake.yml
